<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gsn.catatanku.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_catatan"
        android:name="com.gsn.catatanku.ui.catatan.CatatanFragment"
        android:label="@string/title_catatan"
        tools:layout="@layout/fragment_catatan" />

    <fragment
        android:id="@+id/navigation_tugas"
        android:name="com.gsn.catatanku.ui.tugas.TugasFragment"
        android:label="@string/title_tugas"
        tools:layout="@layout/fragment_tugas" />
</navigation>